--- a/text/xharmi00-appendices.tex
+++ b/text/xharmi00-appendices.tex
@@ -5,10 +5,14 @@
 \chapter{Contents of Attached Memory Media}
 \label{chap:memoryMedia}
 
+\todo{TODO}
+
 
 
 \chapter{Installation and User Manual}
 \label{chap:manual}
+
+\todo{TODO}
 
 
 %===============================================================================
