--- a/text/xharmi00.tex
+++ b/text/xharmi00.tex
@@ -20,6 +20,7 @@
 \usepackage{subcaption}
 \usepackage{wrapfig}
 \usepackage{amsthm}
+\usepackage[normalem]{ulem}
 
 % Setting of a path to the pictures.
 \graphicspath{{figures/}{./figures/}}
@@ -83,7 +84,7 @@
 
 % Information about the thesis
 %-------------------------------------------------------------------------------
-\projectinfo{
+\projectinfo{%
     % Thesis
     project={BP}, % thesis type
     year={2019}, % year of submission
@@ -174,12 +175,9 @@
     },
     % Extended abstract
     extendedabstract={%
-        \todo{
-            Do tohoto odstavce bude zapsán rozšířený výtah (abstrakt) práce
-            v~českém jazyce.
-        }
-
-        \blind{5}
+        \todo{TODO}
+        % Do tohoto odstavce bude zapsán rozšířený výtah (abstrakt) práce
+        % v~českém jazyce.
     },
 %
     % Declaration
